# editwidgettest

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.user.71062a2  files.txt  gitpush.sh  helpers.py  scratch.yml  test.htm  test.xml  test.yaml
apps/: CMakeLists.txt
apps/HtmlEditApp/: CMakeLists.txt
apps/HtmlEditApp/src/: config.cpp  config.h  htmleditor.cpp  htmleditor.h  main.cpp  mainwindow.cpp  mainwindow.h
apps/QYamlApp/: CMakeLists.txt
apps/QYamlApp/src/: mainwindow.cpp  mainwindow.h
libs/: CMakeLists.txt
